--- a/src/components/components.css
+++ b/src/components/components.css
@@ -68,13 +68,14 @@
     align-items: center;
    
 }
-.left{
+/* .left{
     flex: 2;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
+ 
     
-}
+} */
 .right{
     flex: 3;
     position: relative;
@@ -215,3 +216,39 @@
         background-color: #da4ea2;
     
 }
+
+.righthero{
+    width: 50%;
+    height: 100vh;
+}
+/* Mymodel.css */
+
+/* .mymodel-container {
+    width: 80%; 
+    height: 90vh;
+    top: 0;
+    right: 0;
+  }
+   */
+
+ /* styles.css */
+
+.container {
+    display: flex;
+  }
+  
+  .mymodel-container {
+    width: 50%;
+    height: 90vh;
+    margin-right: 20px; /* Add margin for spacing between elements */
+    
+  }
+  
+  .left {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    
+  }
+  
