--- a/src/components/components.css
+++ b/src/components/components.css
@@ -239,9 +239,9 @@
   
   .mymodel-container {
     width: 50%;
-    height: 90vh;
-    margin-right: 20px; /* Add margin for spacing between elements */
-    
+    height: 80vh;
+    margin-right: 20px; 
+    padding-bottom: 10%;
   }
   
   .left {
@@ -249,6 +249,26 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    
+    padding-left: 10%;
+    padding-top: 8%;
+  }
+  /* box */
+ 
+  .picturebox{
+    width: 100%;
+    height: 300px;
+    justify-content: center;
+  }
+  .mymodel-container2 {
+    /* width: 50%;
+    height: 80vh;
+    margin-right: 20px; 
+    padding-bottom: 10%;
+    justify-content: center; */
+    width: 50%;
+    height: 100%;
+    justify-content: center;
+    padding-top: 20%;
+   
   }
   
