--- a/src/components/components.css
+++ b/src/components/components.css
@@ -250,25 +250,36 @@
     flex-direction: column;
     gap: 30px;
     padding-left: 10%;
-    padding-top: 8%;
+    padding-top: 5%;
+    padding-right: 5% ;
   }
   /* box */
- 
+  .left2 {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding-left: 10%;
+    padding-top: 2%;
+    padding-right: 5% ;
+  }
   .picturebox{
-    width: 100%;
-    height: 300px;
-    justify-content: center;
+    width: 300px;
+    height: 500px;
+    padding-left: 15vh;
+    padding-top: 10vh;
+    
   }
   .mymodel-container2 {
-    /* width: 50%;
-    height: 80vh;
-    margin-right: 20px; 
-    padding-bottom: 10%;
-    justify-content: center; */
-    width: 50%;
+   
+    width: 40%;
     height: 100%;
     justify-content: center;
-    padding-top: 20%;
    
   }
-  
+  .description{
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
